# OCR-Test

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: admin.py  models.py  utils.py  views.py
core/templates/core/: documents.html  simple_upload.html
uploads/: settings.py  urls.py
uploads/templates/: base.html  nav.html
uploads/templates/registration/: login.html
