[tool.poetry]
name = "simple-file-upload"
version = "0.1.0"
description = ""
authors = ["pushpendra"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
ocrmypdf = "^12.3.3"
pdfplumber = "^0.5.28"
PyPDF2 = "^1.26.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
